css/default.css
/* ... */
/*  For abstract-less sections, content visible through disclosure button.
 */
section.collapse.no-abstract.expanded-not > .disclosure-button .part.bottom::before {
    opacity: 0.85;
}

/*  Heading.
 */

section.collapse > .heading {
    position: relative;
    min-height: var(--collapse-toggle-top-height);
    margin-left: calc(-1 * var(--collapse-toggle-left-width));
    margin-bottom: 0;
    padding: 0.25em 2.5em 0 0;
    text-align: left;
    border: none;
    box-sizing: border-box;
    pointer-events: none;
}

/*  H1.
 */
section.collapse.level1 > .heading {
    font-size: 1.75em;
}

/*  Heading self-link.
 */

section.collapse > .heading a {
    position: relative;
    pointer-events: auto;
}
section.collapse > .heading a,
section.collapse > .heading a * {
    text-shadow: none;
}

section.collapse > .heading a::after {
    right: -1.25em;
    bottom: 0.4em;
}

/*  H1.
 */
section.collapse.level1 > .heading a::after {
    left: unset;
}

/**********************************/
/*  Collapsible non-section blocks.
 */

div.collapse.no-abstract.expanded-not > .disclosure-button {
    box-shadow: none;
}
div.collapse.no-abstract.expanded-not > .disclosure-button .part::before {
    opacity: 0.85;
}

/***************************/
/*  Collapsible code blocks.
 */

/*  NOTE: ‘.sourceCode’ is a Pandoc-hardwired CSS class for code blocks. We do
    not rewrite it to ‘.source-code’ for consistency with all our other custom
    classes, because that risks confusion & interoperability problems, which is
    not worth it for a bit of name consistency.
 */

.sourceCode.collapse.expanded > .collapse-content-wrapper {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
}
.sourceCode.collapse.expanded-not > .collapse-content-wrapper pre {
    max-height: calc(  var(--collapse-toggle-top-height)
                     + var(--collapse-toggle-bottom-height));
    box-sizing: border-box;
    overflow: hidden;
}

.sourceCode.collapse.expanded-not > .collapse-content-wrapper.width-full {
    max-width: 100%;
    margin: 0 !important;
}

.sourceCode.collapse.expanded-not > .disclosure-button .part::before {
    opacity: 0.70;
}

.sourceCode.collapse > .disclosure-button .part.top .label,
.sourceCode.collapse > .disclosure-button .part.top .icon {
    margin-top: 1px;
}
.sourceCode.collapse > .disclosure-button .part.top .icon {
    margin-right: 1px;
}
.sourceCode.collapse > .disclosure-button .part.bottom .label {
    margin-bottom: 1px;
}

/**********************/
/*  Collapsible tables.
 */

.table-wrapper.collapse.expanded-not {
    overflow: hidden;
    margin-left: 0;
    padding: 0;
}

.table-wrapper.collapse > .disclosure-button .part.top .label,
.table-wrapper.collapse > .disclosure-button .part.top .icon {
    margin-top: 2px;
}

.table-wrapper.collapse.expanded > .collapse-content-wrapper {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
}

/**********************************************************************/
/*  “Bare content” collapses (not a section, not code, not table, etc.)
 */

.collapse.bare-content.has-abstract {
    --collapse-toggle-top-height: calc(2.25 * var(--base-font-size));

    padding-left: var(--collapse-left-offset);
}

.collapse.bare-content.no-abstract {
    --collapse-toggle-bottom-height: calc(2.5 * var(--base-font-size));
}

.collapse.bare-content.has-abstract.expanded > .collapse-content-wrapper {
	padding: 0 0 0.5em 0;
}

.collapse.bare-content.no-abstract.expanded-not > .collapse-content-wrapper {
    padding: 0.25em 0.5em;
}
.collapse.bare-content.no-abstract.expanded > .collapse-content-wrapper {
    padding: 0.5em 0;
}

/****************************/
/*  Collapses in blockquotes.
 */

blockquote .collapse-block,
blockquote .collapse-block.expanded {
    padding-left: var(--blockquote-horizontal-padding);
    padding-right: var(--blockquote-horizontal-padding);
    margin-left: calc(-1 * var(--blockquote-horizontal-padding) / var(--blockquote-font-size-scaling-factor));
    margin-right: calc(-1 * var(--blockquote-horizontal-padding) / var(--blockquote-font-size-scaling-factor));
}
blockquote > .collapse-block:last-child {
    margin-bottom: calc(-1 * var(--blockquote-vertical-padding) / var(--blockquote-font-size-scaling-factor));
}

blockquote .collapse-block > .disclosure-button {
    --collapse-button-text-color: var(--GW-collapse-in-blockquote-disclosure-button-text-color);
    --collapse-button-background-color: var(--GW-collapse-in-blockquote-disclosure-button-color);
}
blockquote .collapse-block > .disclosure-button:hover {
    --collapse-button-text-color: var(--GW-collapse-in-blockquote-disclosure-button-text-hover-color);
    --collapse-button-background-color: var(--GW-collapse-in-blockquote-disclosure-button-hover-color);
}

blockquote .collapse-block.no-abstract.expanded-not > .disclosure-button .part::before {
    opacity: 0.70;
}

/**************************/
/*  Collapses in footnotes.
 */

.footnote .collapse-block {
    --collapse-left-offset: calc(0.75 * var(--base-font-size));
}

/****************************************/
/*	Aux-links and file include collapses.
 */
.collapse.aux-links-append,
.collapse.file-include-collapse {
    --collapse-toggle-top-height: calc(2.25 * var(--base-font-size));
    --collapse-toggle-bottom-height: calc(2.25 * var(--base-font-size));
}

/**************************/
/*	File include collapses.
 */

.collapse.file-include-collapse {
    --collapse-toggle-top-height: calc(2.25 * var(--base-font-size));
    --collapse-toggle-bottom-height: calc(2.25 * var(--base-font-size));

    padding-left: var(--collapse-left-offset);
}

.collapse.file-include-collapse > .collapse-content-wrapper {
    padding: 0.5em 0.5em 0.5em 0;
}

/***********************************************************/
/*  “Aux links” and “file include” collapses in annotations.
 */

.annotation .collapse.aux-links-append,
.annotation .collapse.file-include-collapse {
    border-top: 1px solid var(--GW-aux-links-collapse-border-color);
}
/* ... */

